syntax = "proto3";

package Skyline.Dataminer.Proto.CloudGatewayDcpRequestResponses;

message DcpRequestResponseRequest {
    DcpRequest dcp_request = 1;
}

message DcpRequestResponseResponse {
	bool contains_error = 1;
	string error = 2;
	DcpResponse dcp_response = 3;
}

message DcpRequest {
	string token = 1;
	string path = 2;
	string json_body = 3;
	string http_method = 4;
}

message DcpResponse {
	int32 statusCode = 1;
	string body = 2;
}